Fix #47, Fix #48
Signed-off-by: shedaniel <daniel@shedaniel.me>