@@ -28,6 +28,7 @@ import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.IOException;
+import java.io.PrintStream;
 import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.net.URI;
@@ -38,13 +39,20 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.function.Consumer;
 
+import com.google.common.base.Stopwatch;
 import com.google.common.collect.ImmutableMap;
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.output.NullOutputStream;
 import org.gradle.api.Project;
+import org.gradle.api.logging.LogLevel;
+import org.gradle.api.logging.configuration.ShowStacktrace;
 
 import net.fabricmc.loom.LoomGradleExtension;
+import net.fabricmc.loom.LoomGradlePlugin;
 import net.fabricmc.loom.api.mappings.layered.MappingsNamespace;
 import net.fabricmc.loom.configuration.DependencyProvider;
 import net.fabricmc.loom.configuration.providers.mappings.GradleMappingContext;
@@ -55,14 +63,18 @@ import net.fabricmc.loom.util.srg.Tsrg2Utils;
 import net.fabricmc.loom.util.srg.Tsrg2Writer;
 import net.fabricmc.mappingio.MappingReader;
 import net.fabricmc.mappingio.MappingVisitor;
+import net.fabricmc.mappingio.adapter.ForwardingMappingVisitor;
 import net.fabricmc.mappingio.tree.MappingTree;
 import net.fabricmc.mappingio.tree.MemoryMappingTree;
 
 public class SrgProvider extends DependencyProvider {
 	private Path srg;
 	private Boolean isTsrgV2;
+	private Path mergedMojangRaw;
 	private Path mergedMojang;
 	private Path mergedMojangTrimmed;
+	private static Path mojmapTsrg;
+	private static Path mojmapTsrg2;
 
 	public SrgProvider(Project project) {
 		super(project);
@@ -85,7 +97,18 @@ public class SrgProvider extends DependencyProvider {
 		}
 
 		if (isTsrgV2) {
-			if (!Files.exists(mergedMojang) || !Files.exists(mergedMojangTrimmed) || isRefreshDeps()) {
+			if (!Files.exists(mergedMojangRaw) || !Files.exists(mergedMojang) || !Files.exists(mergedMojangTrimmed) || isRefreshDeps()) {
+				Stopwatch stopwatch = Stopwatch.createStarted();
+				getProject().getLogger().lifecycle(":merging mappings (InstallerTools, srg + mojmap)");
+				PrintStream out = System.out;
+				PrintStream err = System.err;
+
+				if (getProject().getGradle().getStartParameter().getLogLevel().compareTo(LogLevel.LIFECYCLE) >= 0) {
+					System.setOut(new PrintStream(NullOutputStream.NULL_OUTPUT_STREAM));
+					System.setErr(new PrintStream(NullOutputStream.NULL_OUTPUT_STREAM));
+				}
+
+				Files.deleteIfExists(mergedMojangRaw);
 				Files.deleteIfExists(mergedMojang);
 				net.minecraftforge.installertools.ConsoleTool.main(new String[] {
 						"--task",
@@ -93,14 +116,15 @@ public class SrgProvider extends DependencyProvider {
 						"--left",
 						getSrg().toAbsolutePath().toString(),
 						"--right",
-						getMojmapTsrg(getProject(), getExtension()).toAbsolutePath().toString(),
+						getMojmapTsrg2(getProject(), getExtension()).toAbsolutePath().toString(),
 						"--classes",
 						"--output",
-						mergedMojang.toAbsolutePath().toString()
+						mergedMojangRaw.toAbsolutePath().toString()
 				});
 
 				MemoryMappingTree tree = new MemoryMappingTree();
-				MappingReader.read(new StringReader(FileUtils.readFileToString(mergedMojang.toFile(), StandardCharsets.UTF_8)), tree);
+				MappingReader.read(new StringReader(FileUtils.readFileToString(mergedMojangRaw.toFile(), StandardCharsets.UTF_8)), new FieldDescWrappingVisitor(tree));
+				Files.writeString(mergedMojang, Tsrg2Writer.serialize(tree), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
 				for (MappingTree.ClassMapping classDef : tree.getClasses()) {
 					for (MappingTree.MethodMapping methodDef : classDef.getMethods()) {
@@ -109,19 +133,72 @@ public class SrgProvider extends DependencyProvider {
 				}
 
 				Files.writeString(mergedMojangTrimmed, Tsrg2Writer.serialize(tree), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+				if (getProject().getGradle().getStartParameter().getLogLevel().compareTo(LogLevel.LIFECYCLE) >= 0) {
+					System.setOut(out);
+					System.setErr(err);
+				}
+
+				getProject().getLogger().lifecycle(":merged mappings (InstallerTools, srg + mojmap) in " + stopwatch.stop());
 			}
 		}
+	}
+
+	// Read mojmap and apply field descs to the tsrg2
+	private class FieldDescWrappingVisitor extends ForwardingMappingVisitor {
+		private final Map<FieldKey, String> fieldDescMap = new HashMap<>();
+		private String lastClass;
+
+		protected FieldDescWrappingVisitor(MappingVisitor next) throws IOException {
+			super(next);
+			MemoryMappingTree mojmap = new MemoryMappingTree();
+			MappingReader.read(getMojmapTsrg2(getProject(), getExtension()), mojmap);
+
+			for (MappingTree.ClassMapping classMapping : mojmap.getClasses()) {
+				for (MappingTree.FieldMapping fieldMapping : classMapping.getFields()) {
+					fieldDescMap.put(new FieldKey(classMapping.getSrcName(), fieldMapping.getSrcName()), fieldMapping.getSrcDesc());
+				}
+			}
+		}
+
+		@Override
+		public boolean visitClass(String srcName) throws IOException {
+			if (super.visitClass(srcName)) {
+				this.lastClass = srcName;
+				return true;
+			} else {
+				return false;
+			}
+		}
+
+		@Override
+		public boolean visitField(String srcName, String srcDesc) throws IOException {
+			if (srcDesc == null) {
+				srcDesc = fieldDescMap.get(new FieldKey(lastClass, srcName));
+			}
+
+			return super.visitField(srcName, srcDesc);
+		}
+
+		private record FieldKey(String owner, String name) {}
 	}
 
 	private void init(String version) {
 		File dir = getMinecraftProvider().dir("srg/" + version);
 		srg = new File(dir, "srg.tsrg").toPath();
+		mergedMojangRaw = new File(dir, "srg-mojmap-merged-raw.tsrg").toPath();
 		mergedMojang = new File(dir, "srg-mojmap-merged.tsrg").toPath();
 		mergedMojangTrimmed = new File(dir, "srg-mojmap-merged-trimmed.tsrg").toPath();
 	}
 
 	public Path getSrg() {
 		return srg;
+	}
+
+	public Path getMergedMojangRaw() {
+		if (!isTsrgV2()) throw new IllegalStateException("May not access merged mojmap srg if not on modern Minecraft!");
+
+		return mergedMojangRaw;
 	}
 
 	public Path getMergedMojang() {
@@ -141,30 +218,34 @@ public class SrgProvider extends DependencyProvider {
 	}
 
 	public static Path getMojmapTsrg(Project project, LoomGradleExtension extension) throws IOException {
-		Path path = extension.getMinecraftProvider().dir("forge").toPath().resolve("mojmap.tsrg");
+		if (mojmapTsrg != null) return mojmapTsrg;
 
-		if (Files.notExists(path)) {
-			try (BufferedWriter writer = Files.newBufferedWriter(path, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+		mojmapTsrg = extension.getMinecraftProvider().dir("forge").toPath().resolve("mojmap.tsrg");
+
+		if (Files.notExists(mojmapTsrg) || LoomGradlePlugin.refreshDeps) {
+			try (BufferedWriter writer = Files.newBufferedWriter(mojmapTsrg, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
 				Tsrg2Utils.writeTsrg(visitor -> visitMojmap(visitor, project),
 						MappingsNamespace.NAMED.toString(), false, writer);
 			}
 		}
 
-		return path;
+		return mojmapTsrg;
 	}
 
 	public static Path getMojmapTsrg2(Project project, LoomGradleExtension extension) throws IOException {
-		Path path = extension.getMinecraftProvider().dir("forge").toPath().resolve("mojmap.tsrg2");
+		if (mojmapTsrg2 != null) return mojmapTsrg2;
 
-		if (Files.notExists(path)) {
-			try (BufferedWriter writer = Files.newBufferedWriter(path, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+		mojmapTsrg2 = extension.getMinecraftProvider().dir("forge").toPath().resolve("mojmap.tsrg2");
+
+		if (Files.notExists(mojmapTsrg2) || LoomGradlePlugin.refreshDeps) {
+			try (BufferedWriter writer = Files.newBufferedWriter(mojmapTsrg2, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
 				MemoryMappingTree tree = new MemoryMappingTree();
 				visitMojmap(tree, project);
 				writer.write(Tsrg2Writer.serialize(tree));
 			}
 		}
 
-		return path;
+		return mojmapTsrg2;
 	}
 
 	private static void visitMojmap(MappingVisitor visitor, Project project) {
